[package]
name = "rs-bedvec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = "0.8.4"
ndarray = { version = "0.15", features = ["blas", "approx"] }
blas-src = { version = "*",  default-features=false, features=["netlib"] }
openblas-src = { version = "*", default-features = false, features = ["cblas"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_dot_products"
harness = false